renaming 1.7 to 2.0; removing all custom filters/layout processors except ERB; cleanup
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40481

--- a/test/fixtures/site_with_post_filters/content/meta.yaml
+++ b/test/fixtures/site_with_post_filters/content/meta.yaml
@@ -1,8 +1,8 @@
 # Built-in
 filters_pre:
-  - 'markdown'
+  - 'erb'
 filters_post:
-  - 'smartypants'
+  - 'erb'
 
 # Custom
 title: My New Homepage
