renaming database file and adding it to the repository
--HG--
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40621

--- a/test/fixtures/site_with_database_data_source/config.yaml
+++ b/test/fixtures/site_with_database_data_source/config.yaml
@@ -2,4 +2,4 @@ output_dir:   "output"
 data_source:  "database"
 database:
   adapter:    "sqlite3"
-  dbfile:     "content/content.db"
+  dbfile:     "content/content.sqlite3db"
