moving the database file around to prevent confusion about whether the content directory is necessary or not
--HG--
rename : test/fixtures/site_with_database_data_source/content/content.sqlite3db => test/fixtures/site_with_database_data_source/content.sqlite3db
extra : convert_revision : svn%3A177060d3-6165-4ab0-95eb-642399a075a8/nanoc/trunk%40622

--- a/test/fixtures/site_with_database_data_source/config.yaml
+++ b/test/fixtures/site_with_database_data_source/config.yaml
@@ -2,4 +2,4 @@ output_dir:   "output"
 data_source:  "database"
 database:
   adapter:    "sqlite3"
-  dbfile:     "content/content.sqlite3db"
+  dbfile:     "content.sqlite3db"
