--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
-        - 1.9.3
-        - 1.8.7
+  - 1.9.3
+  - 1.8.7
+  - rbx-18mode
+  - rbx-19mode
 notifications:
-        irc: "chat.freenode.net#nanoc"
+  irc: "chat.freenode.net#nanoc"
